--- a/code/ai4code_train_drive.ipynb
+++ b/code/ai4code_train_drive.ipynb
@@ -252,7 +252,7 @@
     "            * `model_name`- huggingface model card name. e.g. microsoft/unixcoder-base\n",
     "        \"\"\"        \n",
     "        super(UniXcoder, self).__init__()\n",
-    "        self.tokenizer = RobertaTokenizer.from_pretrained(model_name)\n",
+    "        self.tokenizer = RobertaTokenizer.from_pretrained(model_name, use_fast=True)\n",
     "        self.config = RobertaConfig.from_pretrained(model_name)\n",
     "        self.config.is_decoder = True\n",
     "        self.model = RobertaModel.from_pretrained(model_name, config=self.config)\n",
@@ -511,23 +511,19 @@
    "source": [
     "import torch\n",
     "\n",
-    "def reload_model(preload_from_input=False, preload_from_working=False):\n",
+    "def reload_model(preload=None):\n",
     "    global unixcoder_model\n",
     "    global device\n",
     "    default_model_name = \"/home/unixcoderbase\"\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "    use_pretrained = True\n",
     "    state_dict = None\n",
-    "    if preload_from_input:\n",
+    "    if preload is not None:\n",
     "        print(\"Preloading from input...\")\n",
-    "        state_dict = \"../input/ai4code-pre1000/model-1000.bin\" \n",
-    "    if preload_from_working:\n",
-    "        print(\"Preloading from working copy...\")\n",
-    "        state_dict = \"../working/model-final.bin\"\n",
+    "        state_dict = \"/home/ai4-code/code/\" + preload \n",
     "    unixcoder_model = UniXcoder(model_name=default_model_name, state_dict=state_dict)\n",
     "    unixcoder_model.to(device)\n",
     "\n",
-    "reload_model()"
+    "reload_model(preload=\"model-100k-mul1000-all-bs60-8.bin\")"
    ]
   },
   {
@@ -700,34 +696,6 @@
    },
    "outputs": [],
    "source": [
-    "@torch.no_grad()\n",
-    "def find_best_cell_order2(nb):\n",
-    "    code_cells = nb[nb['cell_type'] == 'code'].reset_index(level='cell_id')\n",
-    "    markdown_cells = nb[nb['cell_type'] != 'code'].reset_index(level='cell_id')\n",
-    "    \n",
-    "    embeddings = get_nb_embeddings(nb)\n",
-    "    \n",
-    "    code_cell_ids = code_cells['cell_id'].values\n",
-    "    \n",
-    "    order = code_cell_ids.tolist()    \n",
-    "    \n",
-    "    for m_cell_id in markdown_cells['cell_id'].values:\n",
-    "        markdown_emb = embeddings[m_cell_id]\n",
-    "        best_code = None\n",
-    "        best_score = -123456.0\n",
-    "        \n",
-    "        for c_cell_id in code_cell_ids:\n",
-    "            code_emb = embeddings[c_cell_id]\n",
-    "            cur_sim = sim(markdown_emb, code_emb)\n",
-    "            if cur_sim > best_score:\n",
-    "                best_score = cur_sim\n",
-    "                best_code = c_cell_id\n",
-    "        \n",
-    "        index = order.index(best_code)\n",
-    "        order.insert(index, m_cell_id)\n",
-    "        \n",
-    "    return order\n",
-    "\n",
     "def score_answer(nb_id, order):\n",
     "    ground_truth = [df_orders[nb_id]]\n",
     "    predictions = [order]\n",
@@ -842,179 +810,11 @@
     "\n",
     "\n",
     "def init_wandb(name, config={}):\n",
-    "    is_interactive = \"-interactive\" if is_interactive_mode() else \"\"\n",
+    "    # is_interactive = \"-interactive\" if is_interactive_mode() else \"\"\n",
     "    config=config.copy()\n",
     "    config['name']='Train'\n",
     "    \n",
-    "    wandb.init(project=\"ai4code\", name=(name+is_interactive+\"-jarvis\"), config=config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 308,
-     "referenced_widgets": [
-      "bdcab94b506c4a3fb4b9932465cf4878",
-      "f4d06bd7842a43418bccae854ee08a22",
-      "74b0bc95556a49c9a4bc80dfe1371d1d",
-      "778464aabf044263a9c8dc4e88437755",
-      "c963789ee76c461494a518478497f32f",
-      "e08a3e75f9ad4576942ff4fb28a3e024",
-      "51d499a2d9f444669353fe695eed76b6",
-      "de6499ee7ac94760beda7cec7e3fcc66"
-     ]
-    },
-    "id": "s3_3pn7TjBkB",
-    "outputId": "8cbddd9c-3c25-41fe-aef4-e1d550dd38ff",
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from torch.nn import CrossEntropyLoss\n",
-    "from transformers import get_linear_schedule_with_warmup\n",
-    "\n",
-    "add_end_token = True\n",
-    "end_token = 'END'\n",
-    "\n",
-    "\n",
-    "def train_on_nb(nb_id, model, optimizer, scheduler):\n",
-    "    nb = get_nb_by_id(nb_id)\n",
-    "    code_cell_ids = get_code_cells(nb).tolist()\n",
-    "    code_cell_ids.append(end_token)\n",
-    "    \n",
-    "    markdown_cell_ids = get_markdown_cells(nb)\n",
-    "    train_markdown_cell_ids = []\n",
-    "    for cell_id in markdown_cell_ids:\n",
-    "      text = nb.loc[cell_id]['source']\n",
-    "      # if detect_lang(text) == 'en':\n",
-    "      train_markdown_cell_ids.append(cell_id)\n",
-    "\n",
-    "    correct_order = df_orders.loc[nb_id]\n",
-    "    if add_end_token:\n",
-    "        correct_order.append(end_token)\n",
-    "    \n",
-    "    next_code_cell = {}\n",
-    "    for i in range(len(correct_order)):\n",
-    "        if correct_order[i] in markdown_cell_ids:\n",
-    "            next_code_cell[correct_order[i]] = None\n",
-    "            for j in range(i+1, len(correct_order)):\n",
-    "                if correct_order[j] in code_cell_ids:\n",
-    "                    next_code_cell[correct_order[i]] = correct_order[j]\n",
-    "                    break\n",
-    "            \n",
-    "\n",
-    "    batch_size = 24\n",
-    "    num_chunks = (len(train_markdown_cell_ids) + batch_size - 1) // batch_size\n",
-    "    \n",
-    "    sum_loss = 0.0\n",
-    "\n",
-    "    if len(train_markdown_cell_ids) == 0:\n",
-    "      return 0.0\n",
-    "    \n",
-    "    for batch_markdown_cell_ids in np.array_split(train_markdown_cell_ids, num_chunks):\n",
-    "        batch_code_cells = []\n",
-    "        for markdown_cell_id in batch_markdown_cell_ids:\n",
-    "            need_cell = next_code_cell[markdown_cell_id]\n",
-    "            if need_cell is not None and need_cell not in batch_code_cells:\n",
-    "                batch_code_cells.append(need_cell)\n",
-    "        \n",
-    "        if len(batch_code_cells) == 0:\n",
-    "            continue;\n",
-    "            \n",
-    "        def get_code_source(cell_id):\n",
-    "            if cell_id == end_token:\n",
-    "                return end_token\n",
-    "            return nb.loc[cell_id]['source']\n",
-    "\n",
-    "        \n",
-    "        def get_mark_source(cell_id):\n",
-    "            if cell_id == end_token:\n",
-    "                return end_token\n",
-    "            return nb.loc[cell_id]['source']\n",
-    "\n",
-    "        code_tokens = get_texts_tokens([get_code_source(cell_id) for cell_id in batch_code_cells])\n",
-    "        markdown_tokens = get_texts_tokens([get_mark_source(cell_id) for cell_id in batch_markdown_cell_ids])\n",
-    "\n",
-    "        code_vec = model(code_tokens)\n",
-    "        markdown_vec = model(markdown_tokens)\n",
-    "        scores = torch.einsum(\"ab,cb->ac\", markdown_vec, code_vec) * 1000.0\n",
-    "\n",
-    "        expected_order = []\n",
-    "        for cell_id in batch_markdown_cell_ids:\n",
-    "            if next_code_cell[cell_id] is None:\n",
-    "                assert not add_end_token\n",
-    "                expected_order.append(-100)\n",
-    "            else:\n",
-    "                expected_order.append(batch_code_cells.index(next_code_cell[cell_id]))\n",
-    "\n",
-    "        expected_order = torch.tensor(expected_order).to(device)\n",
-    "        \n",
-    "        loss_fct = CrossEntropyLoss()\n",
-    "        loss = loss_fct(scores, expected_order)\n",
-    "        \n",
-    "        sum_loss = sum_loss + loss.item()\n",
-    "\n",
-    "        loss.backward()\n",
-    "        torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
-    "        optimizer.step()\n",
-    "        optimizer.zero_grad()\n",
-    "    scheduler.step() \n",
-    "    return sum_loss / num_chunks\n",
-    "\n",
-    "\n",
-    "from torch.optim import AdamW\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "# for seed in tqdm(range(steps)):    \n",
-    "#     run_train(seed)\n",
-    "\n",
-    "\n",
-    "def run_train_all_old():\n",
-    "    reload_model()\n",
-    "    model = Model(unixcoder_model)\n",
-    "    model.zero_grad()\n",
-    "    model.train()\n",
-    "\n",
-    "    all = df.index.get_level_values(0).unique()\n",
-    "\n",
-    "    learning_rate = 3e-5\n",
-    "    epochs = 1\n",
-    "    steps = len(all)\n",
-    "\n",
-    "    optimizer = AdamW(model.parameters(), lr=learning_rate, eps=1e-8)\n",
-    "    scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps = 0, num_training_steps = steps * epochs)\n",
-    "\n",
-    "    start_time = time.time()\n",
-    "    last_saved_time = start_time\n",
-    "    save_every_s = 40 * 60\n",
-    "    max_run_s = 12 * 3600\n",
-    "    \n",
-    "    init_wandb(name=\"5k,lr=3e-5,mark,all-lang,mul-1000,all-bs=24\")\n",
-    "    w_loss = 0.0\n",
-    "    \n",
-    "    for id, nb_id in enumerate(tqdm(all)):\n",
-    "        cur_loss = train_on_nb(nb_id, model, optimizer, scheduler)\n",
-    "        \n",
-    "        w_loss = w_loss * 0.95 + cur_loss * 0.05\n",
-    "        wandb.log({'loss': w_loss})\n",
-    "        \n",
-    "        cur_time = time.time()\n",
-    "        if cur_time - last_saved_time > save_every_s:\n",
-    "            last_saved_time = cur_time\n",
-    "            save_model(model, id)\n",
-    "        \n",
-    "        if cur_time - start_time > max_run_s:\n",
-    "            print('Finishing early because of timeout')\n",
-    "            break\n",
-    "            \n",
-    "    wandb.finish()\n",
-    "    save_model(model, \"final\")\n",
-    "\n",
-    "# run_train_all()\n"
+    "    wandb.init(project=\"ai4code\", name=name, config=config)"
    ]
   },
   {
@@ -1028,15 +828,21 @@
     "max_batch_size = 60\n",
     "minibatch_size = 8\n",
     "default_mul = 1000\n",
+    "end_token = 'END'\n",
     "\n",
+    "from torch.nn import CrossEntropyLoss\n",
+    "from transformers import get_linear_schedule_with_warmup\n",
     "from dataclasses import dataclass\n",
+    "from torch.optim import AdamW\n",
     "import random\n",
+    "random.seed(787788)\n",
     "\n",
     "@dataclass\n",
     "class MiniBatch:\n",
     "    markdowns:list\n",
     "    code:list\n",
     "    correct_idx:list # for each markdown store idx in code\n",
+    "    max_len_cache:int\n",
     "        \n",
     "    def append(self, cur_markdown, cur_code):\n",
     "        self.markdowns.append(cur_markdown)\n",
@@ -1048,8 +854,10 @@
     "        \n",
     "        \n",
     "    def get_max_len(self):\n",
-    "        tokens = get_texts_tokens(self.markdowns + self.code)\n",
-    "        return len(tokens[0])\n",
+    "        if self.max_len_cache == 0:\n",
+    "            texts_len = [len(t) for t in (self.markdowns + self.code)]\n",
+    "            self.max_len_cache = max(texts_len)\n",
+    "        return self.max_len_cache\n",
     "    \n",
     "    def cnt(self):\n",
     "        return len(self.markdowns) + len(self.code)\n",
@@ -1104,17 +912,19 @@
     "        num_chunks = (len(samples) + minibatch_size - 1) // minibatch_size\n",
     "        \n",
     "        for batch_samples in np.array_split(samples, num_chunks):\n",
-    "            batch = MiniBatch(markdowns=[], code=[], correct_idx=[])\n",
+    "            batch = MiniBatch(markdowns=[], code=[], correct_idx=[], max_len_cache=0)\n",
     "            for sample in batch_samples:\n",
     "                batch.append(sample.markdown, sample.code)\n",
     "            minibatches.append(batch)\n",
+    "    print('Sorting minibatches')\n",
     "    minibatches.sort(key=lambda x:x.get_max_len())\n",
+    "    print('Done sorting minibatches')\n",
     "    \n",
     "    batches = []\n",
     "    for b in minibatches:\n",
     "        if len(batches) == 0 or batches[-1].sum_cnt + b.cnt() > max_batch_size:\n",
     "            batches.append(Batch(mini=[], sum_cnt=0))\n",
-    "        batches[-1].append(b)\n",
+    "        batches[-1].append(b) \n",
     "        \n",
     "    random.shuffle(batches)        \n",
     "    return batches\n",
@@ -1158,10 +968,11 @@
     "def run_train_all_new():\n",
     "    print('Start training')\n",
     "    all = df.index.get_level_values(0).unique()\n",
+    "    print('Start generating batches...')\n",
     "    batches = gen_batches(all)\n",
     "    print('Generated batches:', len(batches))\n",
     "    \n",
-    "    reload_model()\n",
+    "    reload_model(preload=\"model-100k-mul1000-all-bs60-8.bin\")\n",
     "    model = Model(unixcoder_model)\n",
     "    model.zero_grad()\n",
     "    model.train()\n",
@@ -1181,7 +992,7 @@
     "    save_every_s = 40 * 60\n",
     "    max_run_s = 12 * 3600\n",
     "    \n",
-    "    init_wandb(name=(str(len(all) / 1000) + \"k,lr=3e-5,mul-\" + str(default_mul)+\",all-bs=\"+str(max_batch_size)))\n",
+    "    init_wandb(name=(str(len(all) / 1000) + \"k,lr=3e-5,mul-\" + str(default_mul)+\",all-bs=\"+str(max_batch_size)+\"-\"+str(minibatch_size)))\n",
     "    w_loss = 0.0\n",
     "    \n",
     "    for id, batch in enumerate(tqdm(batches)):\n",
@@ -1236,7 +1047,7 @@
     "if not is_interactive_mode() or True:\n",
     "    print('Going to generate model...')\n",
     "    # 2000 - half an hour\n",
-    "    load_train_nbs(5000)\n",
+    "    load_train_nbs(10_000)\n",
     "    run_train_all_new()\n",
     "\n",
     "# save_results()"
@@ -1250,7 +1061,7 @@
    },
    "outputs": [],
    "source": [
-    "!mv model-final.bin model-5k-mul1000-all-bs60.bin"
+    "!mv model-final.bin model-epoch2-10k.bin"
    ]
   },
   {
@@ -1259,7 +1070,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-5k-mul1000-all-bs60.bin"
+    "!/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-epoch2-10k.bin\n",
+    "# !/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-54321.bin\n",
+    "# !/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-43403.bin\n",
+    "# !/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-37926.bin\n",
+    "# !/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-32433.bin\n",
+    "# !/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-26960.bin\n",
+    "# !/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-21506.bin\n",
+    "# !/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-16067.bin\n",
+    "# !/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-15334.bin\n",
+    "# !/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-10691.bin"
    ]
   },
   {
