--- a/code/ai4code_train_drive.ipynb
+++ b/code/ai4code_train_drive.ipynb
@@ -1047,7 +1047,7 @@
     "if not is_interactive_mode() or True:\n",
     "    print('Going to generate model...')\n",
     "    # 2000 - half an hour\n",
-    "    load_train_nbs(10_000)\n",
+    "    load_train_nbs(50_000)\n",
     "    run_train_all_new()\n",
     "\n",
     "# save_results()"
@@ -1061,7 +1061,7 @@
    },
    "outputs": [],
    "source": [
-    "!mv model-final.bin model-epoch2-10k.bin"
+    "!mv model-final.bin model-epoch1.5.bin"
    ]
   },
   {
@@ -1070,7 +1070,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-epoch2-10k.bin\n",
+    "!/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-epoch1.5.bin\n",
     "# !/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-54321.bin\n",
     "# !/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-43403.bin\n",
     "# !/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-37926.bin\n",
