--- a/code/train_roberta.ipynb
+++ b/code/train_roberta.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "import config\n",
-    "config = config.get_local_config()"
+    "config = config.get_jarvis_config()"
    ]
   },
   {
@@ -51,6 +51,7 @@
    "source": [
     "from wandb_helper import init_wandb\n",
     "import wandb_helper\n",
+    "import wandb\n",
     "wandb_helper.login(config)"
    ]
   },
@@ -157,8 +158,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "BS = 2 # 32\n",
-    "NW = 1 # 8\n",
+    "BS = 32\n",
+    "NW = 7\n",
     "\n",
     "train_loader = DataLoader(dataset, batch_size=BS, shuffle=True, num_workers=NW,\n",
     "                          pin_memory=False, drop_last=True)"
@@ -177,7 +178,6 @@
     "from torch.optim import AdamW\n",
     "from transformers import get_linear_schedule_with_warmup\n",
     "\n",
-    "\n",
     "class MarkdownModel(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(MarkdownModel, self).__init__()\n",
@@ -191,39 +191,39 @@
     "        return x\n",
     "\n",
     "\n",
-    "def train(model, train_loader):\n",
+    "def train(state, model, train_loader):\n",
     "    print('start training...')\n",
     "    np.random.seed(123)\n",
     "    learning_rate = 3e-5\n",
     "    optimizer = AdamW(model.parameters(), lr=learning_rate, eps=1e-8)\n",
     "    scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps = 0, num_training_steps = len(train_loader))\n",
     "    model.train()\n",
-    "    print('len loader:', len(train_loader))\n",
+    "    print('training... num batches:', len(train_loader))\n",
+    "    init_wandb(name='test-roberta-training')\n",
     "\n",
     "    criterion = torch.nn.L1Loss()\n",
-    "    for data in train_loader:\n",
+    "    for data in tqdm(train_loader):\n",
     "        ids, mask, target = data\n",
-    "        print('ids:', ids)\n",
-    "        print('mask:', mask)\n",
-    "        print('target:', target)\n",
     "\n",
     "        optimizer.zero_grad()\n",
-    "        pred = model(ids, mask)\n",
-    "        loss = criterion(pred, target)\n",
-    "\n",
-    "        print('loss:', loss.item())\n",
+    "        pred = model(ids.to(state.device), mask.to(state.device))\n",
+    "        loss = criterion(pred, target.to(state.device))\n",
     "\n",
     "        loss.backward() \n",
     "        torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
     "        \n",
     "        optimizer.step()\n",
     "        scheduler.step() \n",
+    "        wandb.log({'roberta_loss':loss.item()})\n",
+    "    \n",
+    "    wandb.finish()\n",
     "\n",
     "\n",
     "\n",
     "model = MarkdownModel()\n",
+    "model.to(state.device)\n",
     "\n",
-    "train(model, train_loader)\n"
+    "train(state, model, train_loader)\n"
    ]
   }
  ],
@@ -235,7 +235,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('kaggle')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -249,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
