save roberta state

--- a/code/train_roberta.ipynb
+++ b/code/train_roberta.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs(10)"
+    "state.load_train_nbs(1000)"
    ]
   },
   {
@@ -148,7 +148,7 @@
     "\n",
     "\n",
     "dataset = gen_learn_samples(state)\n",
-    "display(dataset)"
+    "print('Dataset created!')"
    ]
   },
   {
@@ -162,7 +162,8 @@
     "NW = 7\n",
     "\n",
     "train_loader = DataLoader(dataset, batch_size=BS, shuffle=True, num_workers=NW,\n",
-    "                          pin_memory=False, drop_last=True)"
+    "                          pin_memory=False, drop_last=True)\n",
+    "print('train_loader created')"
    ]
   },
   {
@@ -179,9 +180,12 @@
     "from transformers import get_linear_schedule_with_warmup\n",
     "\n",
     "class MarkdownModel(nn.Module):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, preload_state=None):\n",
     "        super(MarkdownModel, self).__init__()\n",
     "        self.roberta = RobertaModel.from_pretrained('roberta-base')\n",
+    "        if preload_state is not None:\n",
+    "            print('Preloading state:', preload_state)\n",
+    "            self.roberta.load_state_dict(torch.load(preload_state)) \n",
     "        self.tokenizer = RobertaTokenizer.from_pretrained('roberta-base')\n",
     "        self.top = nn.Linear(768, 1)\n",
     "        \n",
@@ -199,7 +203,7 @@
     "    scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps = 0, num_training_steps = len(train_loader))\n",
     "    model.train()\n",
     "    print('training... num batches:', len(train_loader))\n",
-    "    init_wandb(name='test-roberta-training')\n",
+    "    init_wandb(name='test-roberta-training-second-time-same-data')\n",
     "\n",
     "    criterion = torch.nn.L1Loss()\n",
     "    for data in tqdm(train_loader):\n",
@@ -221,9 +225,22 @@
     "\n",
     "\n",
     "model = MarkdownModel()\n",
+    "model = MarkdownModel(preload_state=\"roberta-model-1k.bin\")\n",
     "model.to(state.device)\n",
     "\n",
     "train(state, model, train_loader)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import common\n",
+    "\n",
+    "# display(model.roberta.encoder.state_dict()) \n",
+    "common.save_roberta_model(model.roberta, \"1k\")"
    ]
   }
  ],
