fix dynamic padding

--- a/code/train_roberta.ipynb
+++ b/code/train_roberta.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs(1000)"
+    "state.load_train_nbs(10000)"
    ]
   },
   {
@@ -88,41 +88,14 @@
     "from transformers import RobertaTokenizer, RobertaModel\n",
     "import random\n",
     "from tqdm import tqdm\n",
+    "import numpy as np \n",
     "\n",
+    "BATCH_SIZE = 60\n",
     "\n",
     "@dataclass\n",
     "class LearnSample:\n",
     "    text:str\n",
     "    relative_position:float\n",
-    "\n",
-    "class MarkdownDataset(Dataset):\n",
-    "    def __init__(self, samples, max_len):\n",
-    "        super().__init__()\n",
-    "        self.samples = samples\n",
-    "        self.max_len = max_len\n",
-    "        # TODO: need lower case?\n",
-    "        self.tokenizer = RobertaTokenizer.from_pretrained('roberta-base', do_lower_case=True) \n",
-    "\n",
-    "    def __getitem__(self, index):\n",
-    "        sample = self.samples[index]\n",
-    "        \n",
-    "        inputs = self.tokenizer.encode_plus(\n",
-    "            sample.text,\n",
-    "            None,\n",
-    "            add_special_tokens=True,\n",
-    "            max_length=self.max_len,\n",
-    "            padding=\"max_length\",\n",
-    "            return_token_type_ids=True,\n",
-    "            truncation=True\n",
-    "        )\n",
-    "        ids = torch.LongTensor(inputs['input_ids'])\n",
-    "        mask = torch.LongTensor(inputs['attention_mask'])\n",
-    "\n",
-    "        return ids, mask, torch.FloatTensor([sample.relative_position])\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.samples)\n",
-    "\n",
     "\n",
     "def gen_learn_samples(state:State, seed=12345):\n",
     "    random.seed(seed)\n",
@@ -141,29 +114,16 @@
     "                relative_position = (pos + 0.5) / len(correct_order)\n",
     "                samples.append(LearnSample(text=nb.loc[cell_id]['source'], relative_position=relative_position))\n",
     "\n",
-    "    random.shuffle(samples)\n",
-    "\n",
-    "    print('samples len:', len(samples))\n",
-    "    return MarkdownDataset(samples, max_len=512)\n",
+    "    samples.sort(key=lambda x:len(x.text))\n",
+    "    num_chunks = (len(samples) + BATCH_SIZE - 1) // BATCH_SIZE\n",
+    "    \n",
+    "    result = list(np.array_split(samples, num_chunks))\n",
+    "    random.shuffle(result)\n",
+    "    return result\n",
     "\n",
     "\n",
     "dataset = gen_learn_samples(state)\n",
-    "print('Dataset created!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "BS = 32\n",
-    "NW = 7\n",
-    "\n",
-    "train_loader = DataLoader(dataset, batch_size=BS, shuffle=True, num_workers=NW,\n",
-    "                          pin_memory=False, drop_last=True)\n",
-    "print('train_loader created')"
+    "print('Dataset created! Len:', len(dataset))"
    ]
   },
   {
@@ -195,23 +155,36 @@
     "        return x\n",
     "\n",
     "\n",
-    "def train(state, model, train_loader):\n",
+    "def train(state, model, dataset):\n",
     "    print('start training...')\n",
     "    np.random.seed(123)\n",
     "    learning_rate = 3e-5\n",
     "    optimizer = AdamW(model.parameters(), lr=learning_rate, eps=1e-8)\n",
-    "    scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps = 0, num_training_steps = len(train_loader))\n",
+    "    scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps = 0, num_training_steps = len(dataset))\n",
     "    model.train()\n",
-    "    print('training... num batches:', len(train_loader))\n",
-    "    init_wandb(name='test-roberta-training-second-time-same-data')\n",
+    "    print('training... num batches:', len(dataset))\n",
+    "    init_wandb(name='test-roberta-training-10k')\n",
     "\n",
     "    criterion = torch.nn.L1Loss()\n",
-    "    for data in tqdm(train_loader):\n",
-    "        ids, mask, target = data\n",
-    "\n",
+    "    for batch in tqdm(dataset):\n",
+    "        texts = list(map(lambda x:x.text, batch))\n",
+    "        inputs = model.tokenizer.batch_encode_plus(\n",
+    "                texts,\n",
+    "                add_special_tokens=True,\n",
+    "                max_length=512,\n",
+    "                padding=\"longest\",\n",
+    "                return_token_type_ids=True,\n",
+    "                truncation=True,\n",
+    "                pad_to_max_length=True\n",
+    "            )\n",
+    "        input_ids = torch.tensor(inputs['input_ids']).to(state.device)\n",
+    "        attention_mask = torch.tensor(inputs['attention_mask']).to(state.device)\n",
+    "        target = list(map(lambda x:[x.relative_position], batch))\n",
+    "        target = torch.tensor(target).to(state.device)\n",
+    "        \n",
     "        optimizer.zero_grad()\n",
-    "        pred = model(ids.to(state.device), mask.to(state.device))\n",
-    "        loss = criterion(pred, target.to(state.device))\n",
+    "        pred = model(input_ids, attention_mask)\n",
+    "        loss = criterion(pred, target)\n",
     "\n",
     "        loss.backward() \n",
     "        torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
@@ -225,10 +198,10 @@
     "\n",
     "\n",
     "model = MarkdownModel()\n",
-    "model = MarkdownModel(preload_state=\"roberta-model-1k.bin\")\n",
+    "# model = MarkdownModel(preload_state=\"roberta-model-1k.bin\")\n",
     "model.to(state.device)\n",
     "\n",
-    "train(state, model, train_loader)\n"
+    "train(state, model, dataset)\n"
    ]
   },
   {
@@ -240,7 +213,16 @@
     "import common\n",
     "\n",
     "# display(model.roberta.encoder.state_dict()) \n",
-    "common.save_roberta_model(model.roberta, \"1k\")"
+    "common.save_roberta_model(model.roberta, \"1k-x2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texts = [\"hello hi this is some sample text\", \"really hi\"]\n"
    ]
   }
  ],
