--- a/code/test_roberta.ipynb
+++ b/code/test_roberta.ipynb
@@ -38,7 +38,7 @@
     "import wandb\n",
     "from state import State\n",
     "\n",
-    "config = config.get_jarvis_config()\n",
+    "config = config.get_local_config()\n",
     "wandb_helper.login(config)\n",
     "state = State(config)"
    ]
@@ -49,53 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs(10000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dataclasses import dataclass\n",
-    "from common import get_markdown_cells, get_code_cells, split_into_batches\n",
-    "from torch.utils.data import DataLoader, Dataset\n",
-    "import torch.nn as nn\n",
-    "from transformers import RobertaTokenizer, RobertaModel\n",
-    "import random\n",
-    "from tqdm import tqdm\n",
-    "import numpy as np \n",
-    "\n",
-    "BATCH_SIZE = 60\n",
-    "\n",
-    "from roberta_model import LearnSample\n",
-    "\n",
-    "def gen_learn_samples(state:State, seed=12345):\n",
-    "    random.seed(seed)\n",
-    "    print('Generating sample on train nbs.')\n",
-    "    samples = []\n",
-    "    df = state.cur_train_nbs\n",
-    "    nbs = df.index.get_level_values(0).unique()\n",
-    "    print('Total nbs:', len(nbs))\n",
-    "\n",
-    "    for nb_id in tqdm(nbs):\n",
-    "        nb = df.loc[nb_id]\n",
-    "        correct_order = state.df_orders[nb_id]\n",
-    "        markdown_cells = get_markdown_cells(nb)\n",
-    "        for pos, cell_id in enumerate(correct_order):\n",
-    "            if cell_id in markdown_cells:\n",
-    "                relative_position = (pos + 0.5) / len(correct_order)\n",
-    "                samples.append(LearnSample(text=nb.loc[cell_id]['source'], relative_position=relative_position))\n",
-    "\n",
-    "    samples.sort(key=lambda x:len(x.text))\n",
-    "    result = split_into_batches(samples, BATCH_SIZE)\n",
-    "    random.shuffle(result)\n",
-    "    return result\n",
-    "\n",
-    "\n",
-    "dataset = gen_learn_samples(state)\n",
-    "print('Dataset created! Len:', len(dataset))"
+    "state.load_train_nbs_tail(1000)"
    ]
   },
   {
@@ -108,11 +62,10 @@
     "from roberta_model import MyRobertaModel\n",
     "\n",
     "\n",
+    "# model = MyRobertaModel(preload_state=\"roberta-model-50k.bin\")\n",
     "model = MyRobertaModel()\n",
-    "# model = MyRobertaModel(preload_state=\"roberta-model-1k.bin\")\n",
     "model.to(state.device)\n",
-    "\n",
-    "roberta_model.train(state, model, dataset)\n"
+    "print('Model loaded')"
    ]
   },
   {
@@ -121,9 +74,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import common\n",
+    "from tqdm import tqdm \n",
+    "import metric\n",
+    "from metric import Score\n",
+    "from common import get_code_cells, get_markdown_cells\n",
+    "from dataclasses import dataclass\n",
+    "import wandb\n",
     "\n",
-    "common.save_roberta_model(model.roberta, \"1k-x2\")"
+    "@dataclass \n",
+    "class OneCell:\n",
+    "    score:float\n",
+    "    cell_id:str\n",
+    "\n",
+    "def predict_order(state: State, nb, model: MyRobertaModel):\n",
+    "    code_cells = get_code_cells(nb)\n",
+    "    markdown_cells = get_markdown_cells(nb)\n",
+    "    \n",
+    "    markdown_texts = list(map(lambda x:nb.loc[x]['source'], markdown_cells))\n",
+    "    scores = model.predict(state, markdown_texts)\n",
+    "\n",
+    "    num_code_cells = len(code_cells)\n",
+    "    cells = [OneCell(cell_id=cell_id, score=score*num_code_cells) for (cell_id, score) in zip(markdown_cells, scores)] + [OneCell(cell_id=cell_id, score=pos + 0.5) for (pos, cell_id) in enumerate(code_cells)]\n",
+    "    cells.sort(key=lambda x:x.score)\n",
+    "\n",
+    "    return list(map(lambda x:x.cell_id, cells))\n",
+    "\n",
+    "def test(state: State, model: MyRobertaModel):\n",
+    "    print('Start testing model:', model.name)\n",
+    "    init_wandb(name='test-model-'+model.name)\n",
+    "    df = state.cur_train_nbs\n",
+    "    all = df.index.get_level_values(0).unique()\n",
+    "    sum_scores = Score(0, 0)\n",
+    "\n",
+    "    for nb_id in tqdm(all):\n",
+    "        nb = df.loc[nb_id]\n",
+    "        my_order = predict_order(state, nb, model)\n",
+    "        score = metric.calc_nb_score(my_order=my_order, correct_order=state.df_orders.loc[nb_id])\n",
+    "        sum_scores = Score.merge(sum_scores, score)\n",
+    "        \n",
+    "        wandb.log({'my':sum_scores.cur_score})\n",
+    "    \n",
+    "    wandb.finish()\n",
+    "\n",
+    "test(state, model)"
    ]
   }
  ],
