fix training workflow

--- a/code/test_roberta.ipynb
+++ b/code/test_roberta.ipynb
@@ -38,7 +38,7 @@
     "import wandb\n",
     "from state import State\n",
     "\n",
-    "config = config.get_local_config()\n",
+    "config = config.get_jarvis_config()\n",
     "wandb_helper.login(config)\n",
     "state = State(config)"
    ]
@@ -62,8 +62,8 @@
     "from roberta_model import MyRobertaModel\n",
     "\n",
     "\n",
-    "# model = MyRobertaModel(preload_state=\"roberta-model-50k.bin\")\n",
-    "model = MyRobertaModel()\n",
+    "model = MyRobertaModel(preload_state=\"roberta-model-10k.bin\")\n",
+    "# model = MyRobertaModel()\n",
     "model.to(state.device)\n",
     "print('Model loaded')"
    ]
@@ -85,6 +85,7 @@
     "class OneCell:\n",
     "    score:float\n",
     "    cell_id:str\n",
+    "    cell_type:str\n",
     "\n",
     "def predict_order(state: State, nb, model: MyRobertaModel):\n",
     "    code_cells = get_code_cells(nb)\n",
@@ -94,14 +95,16 @@
     "    scores = model.predict(state, markdown_texts)\n",
     "\n",
     "    num_code_cells = len(code_cells)\n",
-    "    cells = [OneCell(cell_id=cell_id, score=score*num_code_cells) for (cell_id, score) in zip(markdown_cells, scores)] + [OneCell(cell_id=cell_id, score=pos + 0.5) for (pos, cell_id) in enumerate(code_cells)]\n",
+    "    cells = [OneCell(cell_id=cell_id, score=score*num_code_cells, cell_type='markdown') for (cell_id, score) in zip(markdown_cells, scores)] \\\n",
+    "    + [OneCell(cell_id=cell_id, score=pos + 0.5, cell_type='code') for (pos, cell_id) in enumerate(code_cells)]\n",
     "    cells.sort(key=lambda x:x.score)\n",
-    "\n",
+    "    \n",
     "    return list(map(lambda x:x.cell_id, cells))\n",
     "\n",
-    "def test(state: State, model: MyRobertaModel):\n",
+    "def test(state: State, model: MyRobertaModel, save_to_wandb=True):\n",
     "    print('Start testing model:', model.name)\n",
-    "    init_wandb(name='test-model-'+model.name)\n",
+    "    if save_to_wandb:\n",
+    "        init_wandb(name='test-model-'+model.name)\n",
     "    df = state.cur_train_nbs\n",
     "    all = df.index.get_level_values(0).unique()\n",
     "    sum_scores = Score(0, 0)\n",
@@ -110,13 +113,16 @@
     "        nb = df.loc[nb_id]\n",
     "        my_order = predict_order(state, nb, model)\n",
     "        score = metric.calc_nb_score(my_order=my_order, correct_order=state.df_orders.loc[nb_id])\n",
+    "        \n",
     "        sum_scores = Score.merge(sum_scores, score)\n",
     "        \n",
-    "        wandb.log({'my':sum_scores.cur_score})\n",
+    "        if save_to_wandb:\n",
+    "            wandb.log({'my':sum_scores.cur_score})\n",
     "    \n",
-    "    wandb.finish()\n",
+    "    if save_to_wandb:\n",
+    "        wandb.finish()\n",
     "\n",
-    "test(state, model)"
+    "test(state, model, save_to_wandb=True)"
    ]
   }
  ],
@@ -142,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
