--- a/code/train_roberta.ipynb
+++ b/code/train_roberta.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs(10000)"
+    "state.load_train_nbs(50000)"
    ]
   },
   {
@@ -66,8 +66,7 @@
     "import random\n",
     "from tqdm import tqdm\n",
     "import numpy as np \n",
-    "\n",
-    "BATCH_SIZE = 60\n",
+    "from state import State\n",
     "\n",
     "from roberta_model import LearnSample\n",
     "\n",
@@ -89,7 +88,7 @@
     "                samples.append(LearnSample(text=nb.loc[cell_id]['source'], relative_position=relative_position))\n",
     "\n",
     "    samples.sort(key=lambda x:len(x.text))\n",
-    "    result = split_into_batches(samples, BATCH_SIZE)\n",
+    "    result = split_into_batches(samples, state.config.batch_size)\n",
     "    random.shuffle(result)\n",
     "    return result\n",
     "\n",
@@ -123,7 +122,7 @@
    "source": [
     "import common\n",
     "\n",
-    "common.save_roberta_model(model.roberta, \"1k-x2\")"
+    "common.save_roberta_model(model, \"50k\")"
    ]
   }
  ],
@@ -149,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
