--- a/code/test_roberta.ipynb
+++ b/code/test_roberta.ipynb
@@ -74,32 +74,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tqdm import tqdm \n",
+    "from tqdm import tqdm\n",
     "import metric\n",
     "from metric import Score\n",
     "from common import get_code_cells, get_markdown_cells\n",
     "from dataclasses import dataclass\n",
     "import wandb\n",
     "\n",
-    "@dataclass \n",
+    "\n",
+    "@dataclass\n",
     "class OneCell:\n",
-    "    score:float\n",
-    "    cell_id:str\n",
-    "    cell_type:str\n",
+    "    score: float\n",
+    "    cell_id: str\n",
+    "    cell_type: str\n",
+    "\n",
     "\n",
     "def predict_order(state: State, nb, model: MyRobertaModel):\n",
     "    code_cells = get_code_cells(nb)\n",
     "    markdown_cells = get_markdown_cells(nb)\n",
-    "    \n",
-    "    markdown_texts = list(map(lambda x:nb.loc[x]['source'], markdown_cells))\n",
+    "\n",
+    "    markdown_texts = list(map(lambda x: nb.loc[x]['source'], markdown_cells))\n",
     "    scores = model.predict(state, markdown_texts)\n",
     "\n",
     "    num_code_cells = len(code_cells)\n",
     "    cells = [OneCell(cell_id=cell_id, score=score*num_code_cells, cell_type='markdown') for (cell_id, score) in zip(markdown_cells, scores)] \\\n",
-    "    + [OneCell(cell_id=cell_id, score=pos + 0.5, cell_type='code') for (pos, cell_id) in enumerate(code_cells)]\n",
-    "    cells.sort(key=lambda x:x.score)\n",
-    "    \n",
-    "    return list(map(lambda x:x.cell_id, cells))\n",
+    "        + [OneCell(cell_id=cell_id, score=pos + 0.5, cell_type='code')\n",
+    "           for (pos, cell_id) in enumerate(code_cells)]\n",
+    "    cells.sort(key=lambda x: x.score)\n",
+    "\n",
+    "    return list(map(lambda x: x.cell_id, cells))\n",
+    "\n",
     "\n",
     "def test(state: State, model: MyRobertaModel, save_to_wandb=True):\n",
     "    print('Start testing model:', model.name)\n",
@@ -112,17 +116,19 @@
     "    for nb_id in tqdm(all):\n",
     "        nb = df.loc[nb_id]\n",
     "        my_order = predict_order(state, nb, model)\n",
-    "        score = metric.calc_nb_score(my_order=my_order, correct_order=state.df_orders.loc[nb_id])\n",
-    "        \n",
+    "        score = metric.calc_nb_score(\n",
+    "            my_order=my_order, correct_order=state.df_orders.loc[nb_id])\n",
+    "\n",
     "        sum_scores = Score.merge(sum_scores, score)\n",
-    "        \n",
+    "\n",
     "        if save_to_wandb:\n",
-    "            wandb.log({'my':sum_scores.cur_score})\n",
-    "    \n",
+    "            wandb.log({'my': sum_scores.cur_score})\n",
+    "\n",
     "    if save_to_wandb:\n",
     "        wandb.finish()\n",
     "\n",
-    "test(state, model, save_to_wandb=True)"
+    "\n",
+    "test(state, model, save_to_wandb=True)\n"
    ]
   }
  ],
