--- a/code/train_roberta.ipynb
+++ b/code/train_roberta.ipynb
@@ -65,12 +65,13 @@
     "from transformers import RobertaTokenizer, RobertaModel\n",
     "import random\n",
     "from tqdm import tqdm\n",
-    "import numpy as np \n",
+    "import numpy as np\n",
     "from state import State\n",
     "\n",
     "from roberta_model import LearnSample\n",
     "\n",
-    "def gen_learn_samples(state:State, seed=12345):\n",
+    "\n",
+    "def gen_learn_samples(state: State, seed=12345):\n",
     "    random.seed(seed)\n",
     "    print('Generating sample on train nbs.')\n",
     "    samples = []\n",
@@ -85,16 +86,17 @@
     "        for pos, cell_id in enumerate(correct_order):\n",
     "            if cell_id in markdown_cells:\n",
     "                relative_position = (pos + 0.5) / len(correct_order)\n",
-    "                samples.append(LearnSample(text=nb.loc[cell_id]['source'], relative_position=relative_position))\n",
+    "                samples.append(LearnSample(\n",
+    "                    text=nb.loc[cell_id]['source'], relative_position=relative_position))\n",
     "\n",
-    "    samples.sort(key=lambda x:len(x.text))\n",
+    "    samples.sort(key=lambda x: len(x.text))\n",
     "    result = split_into_batches(samples, state.config.batch_size)\n",
     "    random.shuffle(result)\n",
     "    return result\n",
     "\n",
     "\n",
     "dataset = gen_learn_samples(state)\n",
-    "print('Dataset created! Len:', len(dataset))"
+    "print('Dataset created! Len:', len(dataset))\n"
    ]
   },
   {
