roberta with code model

--- a/code/train_roberta_wc.ipynb
+++ b/code/train_roberta_wc.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs(50000)"
+    "state.load_train_nbs(10)"
    ]
   },
   {
@@ -68,7 +68,7 @@
     "import numpy as np\n",
     "from state import State\n",
     "\n",
-    "from roberta_model import LearnSample\n",
+    "from roberta_model_wc import LearnSample\n",
     "\n",
     "\n",
     "def gen_learn_samples(state: State, seed=12345):\n",
@@ -83,11 +83,17 @@
     "        nb = df.loc[nb_id]\n",
     "        correct_order = state.df_orders[nb_id]\n",
     "        markdown_cells = get_markdown_cells(nb)\n",
+    "        code_cells = get_code_cells(nb)\n",
+    "        code_texts = []\n",
+    "        for cell_id in correct_order:\n",
+    "            if cell_id in code_cells:\n",
+    "                code_texts.append(nb.loc[cell_id]['source'])\n",
+    "\n",
     "        for pos, cell_id in enumerate(correct_order):\n",
     "            if cell_id in markdown_cells:\n",
     "                relative_position = (pos + 0.5) / len(correct_order)\n",
     "                samples.append(LearnSample(\n",
-    "                    text=nb.loc[cell_id]['source'], relative_position=relative_position))\n",
+    "                    text=nb.loc[cell_id]['source'], relative_position=relative_position, code_texts=code_texts))\n",
     "\n",
     "    samples.sort(key=lambda x: len(x.text))\n",
     "    result = split_into_batches(samples, state.config.batch_size)\n",
@@ -105,15 +111,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import roberta_model\n",
-    "from roberta_model import MyRobertaModel\n",
+    "import roberta_model_wc\n",
+    "from roberta_model_wc import MyRobertaModel\n",
     "\n",
     "\n",
     "model = MyRobertaModel()\n",
     "# model = MyRobertaModel(preload_state=\"roberta-model-1k.bin\")\n",
     "model.to(state.device)\n",
     "\n",
-    "roberta_model.train(state, model, dataset)\n"
+    "\n",
+    "roberta_model_wc.train(state, model, dataset, save_to_wandb=True)\n",
+    "print('Model created')"
    ]
   },
   {
@@ -122,9 +130,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import common\n",
-    "\n",
-    "common.save_roberta_model(model, \"50k\")"
+    "name = str(len(state.cur_train_nbs) // 1000) + \"k\"\n",
+    "print('Save name:', name)\n",
+    "model.save(model, name)"
    ]
   }
  ],
@@ -150,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.13"
   },
   "vscode": {
    "interpreter": {
